--- a/src/app/modules/movie/components/thumbnail/thumbnail.component.html
+++ b/src/app/modules/movie/components/thumbnail/thumbnail.component.html
@@ -1,2 +1,15 @@
 
-<img *ngFor="let movie of movies" [src]="movie.poster_path" [alt]="movie.title">
+<mat-card class="movie-thumbnail">
+    <mat-card-header>
+        <mat-card-title>{{movie?.title}}</mat-card-title>
+        <mat-card-subtitle>{{movie?.released_date}}</mat-card-subtitle>
+    </mat-card-header>
+    
+    <img class="movie-image" mat-card-image [src]="movie?.poster_path" [alt]="movie?.title">
+
+    <mat-card-content class="movie-overview">{{movie?.overview}}</mat-card-content>
+
+    <mat-card-actions class="movie-action">
+        <button mat-button color="primary" (click)="addTowatchlist()">Add to Watchlist</button>
+    </mat-card-actions>
+</mat-card>
