--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,25 @@
-<mat-toolbar color="primary">
-    <span>Movie Cruiser</span>
-    <button mat-button [routerLink]="['/movies/popular']">Popular Movies</button>
-    <button mat-button [routerLink]="['/movies/top_rated']">Top Rated Movies</button>
-    <button mat-button [routerLink]="['/movies/watchlist']">Watchlist</button>
 
-    <input matInput id="searchInput" placeholder="Enter Movie" [(ngModel)]="movieName" >
-    <button mat-button (click)="searchMovie()">Search</button>
-</mat-toolbar>
+<nav class="navbar navbar-default mat-toolbar mat-primary ">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <span>Movie Cruiser</span>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li><button mat-button [routerLink]="['/movies/popular']">Popular Movies</button></li>
+                <li><button mat-button [routerLink]="['/movies/top_rated']">Top Rated Movies</button></li>
+                <li><button mat-button [routerLink]="['/movies/watchlist']">Watchlist</button></li>
+
+                <li><input style="color:black" id="searchInput" placeholder="Enter Movie" [(ngModel)]="movieName"></li>
+                <li><button mat-button (click)="searchMovie()">Search</button></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <router-outlet></router-outlet>
