--- a/src/app/modules/movie/components/container/container.component.html
+++ b/src/app/modules/movie/components/container/container.component.html
@@ -1,3 +1,4 @@
 <div class="movie-container">
+  <!-- thumbnail component will take care of displaying a movie-->
   <movie-thumbnail *ngFor="let movie of movies" [movie]="movie"></movie-thumbnail>
 </div>
