--- a/src/app/modules/movie/components/tmdb-container/tmdb-container.component.html
+++ b/src/app/modules/movie/components/tmdb-container/tmdb-container.component.html
@@ -1,2 +1,2 @@
+<!-- movies container module will take care of displaying the list of movies-->
 <movie-container [movies]="movies"></movie-container>
-
