--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-default mat-toolbar mat-primary ">
+<nav class="navbar navbar-default mat-toolbar mat-primary" *ngIf="showNavBar()">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -18,6 +18,9 @@
                 <li><input style="color:black" id="movieSearchInput" placeholder="Enter Movie" [(ngModel)]="movieName"></li>
                 <li><button id="movieSearchButton" mat-button (click)="searchMovie()">Search</button></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><button id="logOutButton" mat-button (click)="logOut()">LogOut</button></li>
+              </ul>
         </div>
     </div>
 </nav>
